--- a/css/blogs.css
+++ b/css/blogs.css
@@ -43,21 +43,17 @@ header .header-icons-container .icons {
 
 main .nav-logo-container {
     width: 100%;
-    z-index: 1;
-    position: absolute;
 }
 
 main .nav-logo-container img {
     width: 200px;
     float: right;
     margin-right: 50px;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 main .profile-link {
-    z-index: 1;
-    position: absolute;
-    margin-top: 15px;
+    display: flex;
 }
 
 main .profile-link a {
@@ -65,13 +61,38 @@ main .profile-link a {
     margin-left: 50px;
     font-weight: bold;
     font-size: 1.2rem;
+    margin-top: 25px;
 }
 
-main .main-container {
-    z-index: 1;
-    position: absolute;
-    color: black;
-    text-align: center;
-    width: 100%;
-    margin-top: 125px;
+.nav-logo {}
+
+.blogs-news {
+    margin-top: 30px;
+}
+
+.blogs-news-container {
+    background-color: #e6e9ed;
+    padding: 0 50px 40px;
+}
+
+.blogs-main-new {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr;
+}
+
+.blogs-news-img-container {
+    grid-column: 1;
+}
+
+.blogs-news-img-container img {
+    width: 85%;
+}
+
+.blogs-news-info-container {
+    grid-column: 2;
+}
+
+.blogs-news-info-container p {
+    margin-bottom: 35px;
 }
