--- a/css/blogs.css
+++ b/css/blogs.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -41,6 +40,8 @@ header .header-icons-container .icons {
     margin-right: 100px;
 }
 
+.nav-logo {}
+
 main .nav-logo-container {
     width: 100%;
 }
@@ -64,10 +65,9 @@ main .profile-link a {
     margin-top: 25px;
 }
 
-.nav-logo {}
-
 .blogs-news {
     margin-top: 30px;
+    height: auto;
 }
 
 .blogs-news-container {
@@ -79,6 +79,11 @@ main .profile-link a {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 2fr;
+}
+
+.blogs-main-new h3 {
+    font-size: 1.6rem;
+    font-weight: bold;
 }
 
 .blogs-news-img-container {
@@ -95,4 +100,69 @@ main .profile-link a {
 
 .blogs-news-info-container p {
     margin-bottom: 35px;
+}
+
+.blogs-button {
+    border: 1px solid #47cfac;
+    padding: 10px 15px;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.blogs-button:hover {
+    border: 1px solid white;
+    color: white;
+    background-color: #48CFAD;
+}
+
+.post-container {
+    display: inline-block;
+    padding-left: 10px;
+    max-width: 30%;
+    margin-bottom: 50px;
+}
+
+.blogs-posts-container {
+    padding: 0 50px 40px;
+}
+
+.blogs-posts-container h3 {
+    border-bottom: 1px solid #cdd2da;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.blogs-button {
+    border: 1px solid #47cfac;
+    padding: 10px 15px;
+    font-size: 12px;
+}
+
+.grid-container {}
+
+.post-container {
+    display: inline-block;
+    max-width: 30%;
+    margin-bottom: 50px;
+}
+
+.post-container p {
+    margin-bottom: 35px;
+}
+
+.post-container img {
+    width: 100%;
+}
+
+footer {
+    width: 100%;
+    height: 80px;
+    background-color: #22272d;
+    border-top: 35px solid #47cfac;
+    text-align: center;
+}
+
+footer p {
+    color: white;
+    margin-top: 30px;
 }
