--- a/css/blog.css
+++ b/css/blog.css
@@ -101,3 +101,32 @@ footer p {
     color: white;
     margin-top: 30px;
 }
+
+.contact-main-container {
+    width: 100%;
+    min-height: 250px;
+    background-color: #e6e9ed;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.contact-main-container div {
+    display: inline-block;
+    width: 45%;
+    height: 100%;
+}
+
+.contact-main-container div a {
+    border-bottom: 1px solid black;
+    padding-bottom: 5px;
+}
+
+.contact-main-container .contact-left,
+.contact-right {
+    text-align: initial;
+    margin-top: 50px;
+}
+
+.contact-main-container img {
+    width: 100px;
+}
